# lean-capnproto

./: .gitignore  .gitmessage  .gitmodules  CMakeLists.txt  json-test.capnp.c++  lake-manifest.json  lakefile.lean
.githooks/: commit-msg
.github/workflows/: ci.yml
doc/: lean4-backend.md  lean4-deep-integration-plan.md  lean4-kjasync-goals.md  lean4-library-suggestions-timeout-repro.md  lean4-plugin-layers.md  lean4-rpc-plan.md
doc/lean4-plugin-layers/: README.md  boundary-rules.md  end-to-end-flow.md  feature-placement.md  gateway-design-openclaw.md  layer-stack.md  ownership-lifecycle.md
ffi/: glibc_compat_features.h  kj_async_bridge.cpp  rpc_bridge.cpp  rpc_bridge_common.cpp  rpc_bridge_common.h  rpc_bridge_generic_vat.cpp  rpc_bridge_generic_vat.h  rpc_bridge_payload_ref.cpp  rpc_bridge_payload_ref.h  rpc_bridge_runtime.cpp  rpc_bridge_runtime.h
lean-plugin/dev/: issues.md
lean-plugin/scripts/: CodeGenBuilder.h  reduce_lean_boilerplate.py
lean/Capnp/: Async.lean  Ffi.lean  KjAsync.lean  Rpc.lean  Rpc.lean_start  RpcKjAsync.lean  Runtime.lean
plugin/: capnpc-lean4.c++
scripts/: check-commit-messages.sh  generate-test-schemas.sh
test/: README.md  TestDriver.lean  TestDriverRpc.lean  addressbook.capnp  parity_matrix.json
test/Bench/: KjAsyncBench.lean
test/LeanTest/: LeanTest.lean  lake-manifest.json  lakefile.lean
test/Test/: AsyncBridge.lean  Builder.lean  Capability.lean  Checked.lean  Common.lean  Conformance.lean  Generated.lean  KjAsync.lean  Packed.lean  Rpc.lean  RpcClient.lean  RpcLayout.lean  RpcOrderingControl.lean  RpcReliability.lean  (+2 more)
(+11 files in other folders)
